cabal-version: 1.12
name:                   monzo-haskell
version:                0.1.0.0
description:            Please see the README on GitHub at <https://github.com/filwisher/monzo-haskell#readme>
homepage:               https://github.com/filwisher/monzo-haskell#readme
bug-reports:            https://github.com/filwisher/monzo-haskell/issues
author:                 William Fisher
maintainer:             williamsykesfisher@gmail.com
copyright:              2019 William Fisher
license:                BSD3
license-file:           LICENSE
build-type:             Simple
extra-source-files:
                        README.md
                        ChangeLog.md

source-repository head
  type:                 git
  location:             https://github.com/filwisher/monzo-haskell

library
  exposed-modules:      Web.Monzo
                        Web.Monzo.Monad
                        Web.Monzo.Auth
  other-modules:        Paths_hsmonzo
  hs-source-dirs:       src
  build-depends:        base >=4.7 && <5
                      , aeson
                      , mtl
                      , text
                      , bytestring
                      , http-client
                      , http-client-tls
  default-language:     Haskell2010
